# ALang

./: .clang-tidy  .ctrc.yml  .gitignore  CMakeLists.txt
.github/hooks/: check-copyright.sh  check-email.sh  clang-format.sh  no-yaml-files.sh  prettier.sh
.github/workflows/: ci.yml
cmake/: base.cmake  config.h.in  git_revision.cmake  package.cmake
code/: basic-math.test.alang  basic.test.alang  bool.test.alang  for.test.alang  if-statement.test.alang  int-variable.test.alang
src/alangvm/: CMakeLists.txt  builder.cpp  builder.hpp  runner.hpp
src/cmd/: CMakeLists.txt  main.cpp  test.cpp
src/cpplib/: CMakeLists.txt  string.cpp  string.hpp
src/framework/: CMakeLists.txt  inflector.hpp  inflector_test.cpp  json_rpc.cpp  json_rpc.hpp  json_rpc_test.cpp  logger.cpp  logger.hpp  logger_test.cpp  read_file.hpp  resolve_path.hpp  split_string_test.cpp  stdio.cpp  stdio.hpp  string_split.hpp  thread_pool.cpp  thread_pool.hpp
src/framework/cli/: argument.hpp  command.cpp  command.hpp  exit_code.hpp  flag.hpp  single_command_application.cpp  single_command_application.hpp  single_command_application_test.cpp
src/parser/: ALang.g4  CMakeLists.txt  alang.hpp
src/parser/alang/: ALang.interp  ALangBaseListener.cpp  ALangBaseListener.h  ALangLexer.cpp  ALangLexer.h  ALangLexer.interp  ALangLexer.tokens  ALangListener.cpp  ALangListener.h  ALangParser.cpp  ALangParser.h
